[package]
name = "y"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
glutin = "0.28.0"
jack = "0.10.0"
log = "0.4.17"
parking_lot = "0.12.0"
raw-window-handle = "0.4.3"
sptr = "0.3.1"
vst = "0.3.0"
winit = "0.26.1"

[[example]]
name = "sine"
crate-type = ["cdylib"]
